# kimi-ui

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_EN.md  build.rs  tauri.conf.json
.github/workflows/: release.yml
capabilities/: default.json  local.json
docs/: remote-bot-design.md
packaging/: Info.plist  dev.kimiui.desktop.plist  make-app.sh
public/: index.html  status.html
scripts/: build-web.sh  icon.swift
src/: main.rs  static_server.rs
