[package]
name = "kimi-ui"
version = "0.1.11"
edition = "2021"
description = "Minimal desktop shell for the Kimi Code web UI (system WebView, low memory)"

[dependencies]
# custom-protocol: makes WebviewUrl::App resolve to embedded assets in release
# builds too (bare `cargo build` would otherwise assume a dev server URL).
tauri = { version = "2", features = ["custom-protocol", "unstable", "macos-private-api", "devtools"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
# Release builds embed web-dist/ into the exe (single-file distribution).
include_dir = "0.7"
# Headless-TUI scraping (plan quota): spawn `kimi` in an embedded PTY and
# reproduce the rendered screen — no external tmux dependency.
portable-pty = "0.8"
vt100 = "0.15"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# Dock badge (unread-notification count) via AppKit; Tauri 2.11 has no
# cross-platform badge API on macOS.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSDockTile"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"
